fix: color contrast a11y on build (#24)

--- a/src/components/organisms/header/style.scss
+++ b/src/components/organisms/header/style.scss
@@ -38,7 +38,7 @@
     }
     &--cta{
       background-color: color('error');
-      color: color('info');
+      color: color(black);
       padding: 0 0.4rem;
       &:hover{
         border-bottom: 2px solid transparent;
